syntax = "proto3";

package vou.proto;

option go_package = "VOU-Server/proto/gen";

message UserPlayData {
    int64 date = 1;         // Ngày chơi game (timestamp)
    int32 quiz_game = 2;     // Số lượng user chơi quizGame
    int32 shake_game = 3;    // Số lượng user chơi shakeGame
}

message RecentUser {
    string username = 1;     // Tên người dùng
    string full_name = 2;    // Tên đầy đủ
    string email = 3;        // Email
    string photo = 4;        // Avatar người dùng
    int32 vouchers = 5;      // Số lượng voucher nhận được
}

message VoucherStats {
    string month = 1;        // Tháng (YYYY-MM)
    int32 quiz_game = 2;     // Số lượng voucher từ quizGame
    int32 shake_game = 3;    // Số lượng voucher từ shakeGame
}

message UserStoreStats {
    int64 store_id = 1;      // ID cửa hàng
    string store_name = 2;   // Tên cửa hàng
    int32 total_user_play = 3; // Tổng số user chơi tại cửa hàng
}

message GetPartnerCmsOverviewRequest {
    string owner = 1;        // Owner của CMS
}

message GetPartnerCmsOverviewResponse {
    int32 total_store = 1;       // Tổng số cửa hàng
    int32 total_branch = 2;      // Tổng số chi nhánh
    int32 total_event = 3;       // Tổng số sự kiện
    int32 total_user_play = 4;   // Tổng số người dùng chơi
    int32 last_month_total_user_play = 5; // Tổng số người dùng chơi tháng trước

    repeated UserPlayData chart_user_play = 6;  // Thống kê số lượng user chơi game theo ngày
    repeated RecentUser list_recent_user = 7;   // Danh sách người dùng mới nhận voucher
    repeated VoucherStats chart_voucher = 8;    // Thống kê voucher theo tháng
    repeated UserStoreStats chart_user_store = 9; // Thống kê user theo cửa hàng
}


message GetAdminCmsOverviewRequest {
    string owner = 1;        // Owner của CMS
}

message AdminUserPlayGroupByPartnerStats {
    string username = 2;   // Username của partner
    int32 total_user_play = 3; // Tổng số user chơi game của partner này
}

message GetAdminCmsOverviewResponse {
    int32 total_partner = 1;       // Tổng số Partner
    int32 total_partner_last_month = 2;      
    int32 total_user = 3;       // Tổng user
    int32 total_user_last_month = 4; 
    int32 total_branch = 5; // Tổng số chi nhánh
    int32 total_branch_last_month = 6; 
    double total_earning = 7; // Tổng doanh thu
    double total_earning_last_month = 8;

    repeated UserPlayData chart_event_created = 9;  // Thống kê số lượng user chơi game theo ngày
    repeated VoucherStats chart_user_play_game = 10;   // Danh sách người dùng mới nhận voucher
    repeated AdminUserPlayGroupByPartnerStats chart_user_play_group_by_partner = 11;    // Thống kê voucher theo tháng
    repeated RecentUser list_recent_partners = 12; // Thống kê user theo cửa hàng
}

message FakeCmsOverviewRequest {}

message FakeCmsOverviewResponse {}
